# runint

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: main.py  routes.py
benchmarks/: base.py  test_run.py
benchmarks/nlp/: translation.py
config/: settings.py
database/: init.sql  models.py
docker/: Dockerfile.api
results/csv/: sanity_check_mock-engine_20251211.csv  test_run_mock-engine_20251211.csv
src/runint/: cli.py
src/runint/runtime/: manager.py
src/runint/runtime/deploy/: generators.py
src/runint/runtime/engines/: base.py  ollama.py  vllm.py
